# cotp

./: .gitignore  .releaserc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  codes_migration.md  install.md  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  combine-prs.yml  deploy.yml  lints.yml  release.yml  rust.yml
ci/: build_pkgbuild.py  write_cargo_version.sh
ci/templates/: PKGBUILD.cotp-bin.template  PKGBUILD.cotp.template
converters/: authy.py  freeotp.py  gauth.py  gauth_to_json.py  mauth.py  requirements.txt  test_converters.py
converters/example_databases/: authy_db.xml  gauth_db.sqlite3
example_databases/: freeotp.xml  freeotp_plus.json
example_databases/microsoft_authenticator/: PhoneFactor
src/: app.rs  args.rs  argument_functions.rs  clipboard.rs  cryptography.rs  cryptograpy.rs  database_loader.rs  database_management.rs  encrypted_database.rs  event.rs  handler.rs  legacy_crypto.rs  main.rs  otp.rs  otp_helper.rs  path.rs  print_settings.rs  reading.rs  table.rs  ui.rs  utils.rs
src/arguments/: add.rs  delete.rs  edit.rs  export.rs  extract.rs  import.rs  list.rs  mod.rs  passwd.rs
src/crypto/: cryptography.rs  encrypted_database.rs  mod.rs
src/exporters/: andotp.rs  freeotp_plus.rs  mod.rs  otp_uri.rs
src/importers/: aegis.rs  aegis_encrypted.rs  and_otp.rs  authy_remote_debug.rs  converted.rs  cotp.rs  freeotp_plus.rs  gauth.rs  google_authenticator.rs  importer.rs  mod.rs  otp_uri.rs
src/interface/: app.rs  enums.rs  event.rs  handler.rs  mod.rs  page.rs  popup.rs  row.rs  stateful_table.rs  table.rs  ui.rs
src/interface/handlers/: main_window.rs  mod.rs  popup.rs  search_bar.rs
src/otp/: from_otp_uri.rs  hotp_maker.rs  mod.rs  motp_maker.rs  otp_algorithm.rs  otp_element.rs  otp_error.rs  otp_helper.rs  otp_maker.rs  otp_type.rs  steam_otp_maker.rs  totp_maker.rs  yandex_otp_maker.rs
src/otp/algorithms/: hotp_maker.rs  mod.rs  motp_maker.rs  steam_otp_maker.rs  totp_maker.rs  yandex_otp_maker.rs
src/otp/migrations/: mod.rs
src/storage/: mod.rs
test_samples/: cotp_input.json  freeotp_plus_example1.json  freeotp_plus_hotp.json
test_samples/cli_integration_test/: empty_database
test_samples/otp_uri/: input_otp_uri.json
tests/: add_integration_tests.rs  cli_integration_tests.rs  init_integration_tests.rs
