[package]
name = "cotp"
version = "1.9.2"
authors = ["replydev <commoncargo@tutanota.com>"]
edition = "2021"
description = "Trustworthy, encrypted, command-line TOTP/HOTP authenticator app with import functionality."
repository = "https://github.com/replydev/cotp"
homepage = "https://github.com/replydev/cotp"
documentation = "https://github.com/replydev/cotp/blob/master/README.md"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-utilities", "authentication"]
keywords = ["cotp", "totp", "authenticator", "google-authenticator", "argon2"]

# Set bin name for CI 
[[bin]]
name = "cotp"
path = "src/main.rs"

# Optimize release binary size
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
dirs = "5.0.1"
rpassword = "7.3.1"
data-encoding = "2.8.0"
copypasta-ext = "0.4.4"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
clap = { version = "4.5.29", features = ["derive"] }
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
chacha20poly1305 = "0.10.1"
getrandom = "0.3.1"
rust-argon2 = "2.1.0"
scrypt = "0.11.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
qrcode = "0.14.1"
urlencoding = "2.1.3"
base64 = "0.22.1"
md-5 = "0.10.6"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
url = "2.5.2"
color-eyre = "0.6.3"
enum_dispatch = "0.3.13"
derive_builder = "0.20.1"
