[package]
name = "cotp"
version = "1.10.0"
authors = ["replydev <commoncargo@tutanota.com>"]
edition = "2024"
description = "Trustworthy, encrypted, command-line TOTP/HOTP authenticator app with import functionality."
repository = "https://github.com/replydev/cotp"
homepage = "https://github.com/replydev/cotp"
documentation = "https://github.com/replydev/cotp/blob/master/README.md"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-utilities", "authentication"]
keywords = ["cotp", "totp", "authenticator", "google-authenticator", "argon2"]

# Set bin name for CI
[[bin]]
name = "cotp"
path = "src/main.rs"

# Optimize release binary size
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
dirs = "6.0.0"
rpassword = "7.5.4"
data-encoding = "2.11.0"
copypasta-ext = "0.4.4"
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }
clap = { version = "4.6.4", features = ["derive"] }
hmac = "0.13.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
chacha20poly1305 = "0.11.0"
getrandom = "0.4.3"
rust-argon2 = "3.0.0"
scrypt = "0.12.0"
aes-gcm = "0.11.0"
qrcode = { version = "0.14.1", default-features = false }
urlencoding = "2.1.3"
md-5 = "0.11.0"
# Default features minus "all-widgets" (widget-calendar), which the TUI never
# uses and which drags the `time` crate into every build, and minus "macros",
# which cotp does not use either.
ratatui = { version = "0.30.2", default-features = false, features = [
    "crossterm",
    "layout-cache",
    "underline-color",
] }
crossterm = "0.29.0"
url = "2.5.8"
# Direct pin of url's IDNA backend to the unicode-rs adapter, keeping the much
# larger ICU4X tables out of the binary. cotp only parses otpauth:// URIs and
# never needs internationalized domain names.
idna_adapter = "~1.0"
eyre = "0.6.12"
enum_dispatch = "0.3.13"
derive_builder = "0.20.2"
prost = "0.14.4"

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
predicates = "3.1.4"
test-case = "3.3.1"
